
Add the encpasulation of message.
Move the processing of the Identity messages.