@@ -1,3 +1,4 @@
 
-Add the encpasulation of message.
-Move the processing of the Identity messages.
+Add a prefix function in the node id.
+Add reason to JoinError messages.
+Correct the SkiptTree join to respect the locality.
